--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip wheel
           pip install -r requirements-test.txt
       - name: build
-        run: python ./setup.py sdist
+        run: python ./setup.py sdist bdist_wheel
       - name: twine
         run: twine check dist/*
       - name: Publish package
