Lint: Add prettier to format yaml and json files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,20 +3,19 @@ name: Test
 on:
   push:
     paths:
-      - 'weblate_schemas/**'
-      - '*.py'
-      - 'requirements*.txt'
-      - '.github/workflows/test.yml'
+      - "weblate_schemas/**"
+      - "*.py"
+      - "requirements*.txt"
+      - ".github/workflows/test.yml"
   pull_request:
     paths:
-      - 'weblate_schemas/**'
-      - '*.py'
-      - 'requirements*.txt'
-      - '.github/workflows/test.yml'
+      - "weblate_schemas/**"
+      - "*.py"
+      - "requirements*.txt"
+      - ".github/workflows/test.yml"
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
