--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,24 +3,23 @@ name: Lint
 on:
   push:
     paths:
-      - '**.py'
-      - 'setup.cfg'
-      - '.pre-commit-config.yaml'
-      - 'pyproject.toml'
-      - 'requirements*.txt'
-      - '.github/workflows/lint.yml'
+      - "**.py"
+      - "setup.cfg"
+      - ".pre-commit-config.yaml"
+      - "pyproject.toml"
+      - "requirements*.txt"
+      - ".github/workflows/lint.yml"
   pull_request:
     paths:
-      - '**.py'
-      - 'setup.cfg'
-      - '.pre-commit-config.yaml'
-      - 'pyproject.toml'
-      - 'requirements*.txt'
-      - '.github/workflows/lint.yml'
+      - "**.py"
+      - "setup.cfg"
+      - ".pre-commit-config.yaml"
+      - "pyproject.toml"
+      - "requirements*.txt"
+      - ".github/workflows/lint.yml"
 
 jobs:
   flake8:
-
     runs-on: ubuntu-latest
 
     steps:
