--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,6 @@ repos:
         args: [--fix=lf]
       - id: check-json
       - id: fix-encoding-pragma
-      - id: pretty-format-json
-        args: ["--autofix"]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
     hooks:
@@ -55,3 +53,7 @@ repos:
     hooks:
       - id: check-hooks-apply
       - id: check-useless-excludes
+  - repo: https://github.com/prettier/prettier
+    rev: 2.0.5
+    hooks:
+      - id: prettier
