--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,22 +1,11 @@
-name: Lint
+# This file is maintained in https://github.com/WeblateOrg/meta/
+name: Flake8
 
 on:
   push:
-    paths:
-      - "**.py"
-      - "setup.cfg"
-      - ".pre-commit-config.yaml"
-      - "pyproject.toml"
-      - "requirements*.txt"
-      - ".github/workflows/lint.yml"
+    branches-ignore:
+      - "dependabot/**"
   pull_request:
-    paths:
-      - "**.py"
-      - "setup.cfg"
-      - ".pre-commit-config.yaml"
-      - "pyproject.toml"
-      - "requirements*.txt"
-      - ".github/workflows/lint.yml"
 
 jobs:
   flake8:
@@ -26,8 +15,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v1
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-lint-${{ hashFiles('**/requirements*.txt') }}
+          path: |
+            ~/.cache/pip
+            ~/.cache/pre-commit
+          key: ${{ runner.os }}-pip-lint-${{ hashFiles('**/requirements*.txt') }}-${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
