--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,5 @@ include_trailing_comma = True
 force_grid_wrap = 0
 use_parentheses = True
 line_length = 88
-project = weblate_schema
+known_first_party = weblate_schema
 known_third_party = jsonschema
