--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,22 +10,28 @@ repos:
       - id: check-toml
       - id: requirements-txt-fixer
       - id: check-merge-conflict
+      - id: debug-statements
       - id: mixed-line-ending
         args: [--fix=lf]
       - id: check-json
-      - id: fix-encoding-pragma
-        args: [--remove]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.7.0
     hooks:
       - id: isort
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.8.0
+    hooks:
+      - id: pyupgrade
+        args: [--py36-plus]
+  - repo: https://github.com/psf/black
+    rev: 20.8b1
+    hooks:
+      - id: black
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
     hooks:
       - id: flake8
         additional_dependencies:
-          - flake8-breakpoint
-          - flake8-black
           - flake8-bugbear
           - flake8-builtins
           - flake8-comprehensions
@@ -33,26 +39,13 @@ repos:
           - flake8-docstrings
           - flake8-eradicate
           - flake8-executable
-          - flake8-isort
           - flake8-logging-format
           - flake8-mutable
-          - flake8-no-u-prefixed-strings
+          - flake8-polyfill
           - flake8-print
           - flake8-return
           - flake8-self
-          - flake8-string-format
           - pep8-naming
-  - repo: local
-    hooks:
-      - id: pyupgrade
-        name: pyupgrade
-        entry: pyupgrade --py36-plus
-        language: system
-        types: [python]
-  - repo: https://github.com/ambv/black
-    rev: 20.8b1
-    hooks:
-      - id: black
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.26.0
     hooks:
