dist: Use setup.cfg to define static metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,46 @@
+[metadata]
+name = weblate_schemas
+version = 2022.1
+description = A collection of JSON schemas used by Weblate
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+url = https://weblate.org/
+author = Michal Čihař
+author_email = michal@cihar.com
+license = MIT
+license_file = LICENSE
+platforms = any
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Software Development :: Internationalization
+    Topic :: Software Development :: Localization
+    Topic :: Utilities
+download_url = https://github.com/WeblateOrg/weblate_schemas
+keywords = i18n l10n gettext translate weblate
+project_urls =
+    Issue Tracker=https://github.com/WeblateOrg/weblate_schemas/issues
+    Documentation=https://docs.weblate.org/
+    Source Code=https://github.com/WeblateOrg/weblate_schemas
+    Twitter=https://twitter.com/WeblateOrg
+    Funding=https://weblate.org/donate/
+
+[options]
+packages = find_namespace:
+python_requires = >=3.6
+include_package_data = 1
+zip_safe = 0
+
 [flake8]
 max-complexity = 16
 select = E,W1,W2,W3,W504,W505,W6,B
