ci: Reduce pre-commit autoupdate frequency
This is done using renovate, but there is no way to disable it completely.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,12 +10,16 @@ repos:
   - id: check-toml
   - id: requirements-txt-fixer
   - id: check-merge-conflict
+  - id: check-json
   - id: debug-statements
   - id: mixed-line-ending
     args: [--fix=lf]
-  - id: check-json
   - id: pretty-format-json
     args: [--no-sort-keys, --autofix, --no-ensure-ascii]
+- repo: https://github.com/adrienverge/yamllint
+  rev: v1.29.0
+  hooks:
+  - id: yamllint
 - repo: https://github.com/PyCQA/isort
   rev: 5.12.0
   hooks:
@@ -49,10 +53,10 @@ repos:
     - flake8-self==0.2.2
     - flake8-assertive==2.1.0
     - pep8-naming==0.13.3
-- repo: https://github.com/adrienverge/yamllint
-  rev: v1.29.0
+- repo: https://github.com/asottile/blacken-docs
+  rev: 1.13.0
   hooks:
-  - id: yamllint
+  - id: blacken-docs
 - repo: meta
   hooks:
   - id: check-hooks-apply
@@ -67,6 +71,8 @@ repos:
   hooks:
   - id: mdformat
     additional_dependencies:
-    - mdformat-gfm
-    - mdformat-black
-    - mdformat-shfmt
+    - mdformat-gfm==0.3.5
+    - mdformat-black==0.1.1
+    - mdformat-shfmt==0.1.0
+ci:
+  autoupdate_schedule: quarterly
