ci: Use DEEPSOURCE_DSN from secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
     - name: DeepSource
       continue-on-error: true
       env:
-        DEEPSOURCE_DSN: https://bf0f63ba38be46a399ad6301593ae7d6@deepsource.io
+        DEEPSOURCE_DSN: ${{secrets.DEEPSOURCE_DSN}}
       run: |
         curl https://deepsource.io/cli | sh
         ./bin/deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
