--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel
         pip install -r requirements.txt -r requirements-test.txt
+        pip install -e .
     - name: Test
       run: |
         py.test --cov=weblate_schemas weblate_schemas
