--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ python_requires = >=3.9
 include_package_data = 1
 zip_safe = 0
 
+[options.entry_points]
+fedora.messages =
+    weblate.message.v1 = weblate_schemas.messages:WeblateV1Message
+
 [flake8]
 max-complexity = 16
 extend-select = E,W1,W2,W3,W504,W505,W6,B
