--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,11 +27,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: astral-sh/setup-uv@v3
     - name: Install pip dependencies
-      run: |
-        python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt -r requirements-test.txt
-        pip install -e .
+      run: uv pip install --system -e .[dev]
     - name: Test
       run: |
         py.test --cov=weblate_schemas weblate_schemas
