--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,100 @@
-[tool.black]
-target-version = ['py39']
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = [
+  "setuptools>=61.2"
+]
+
+[project]
+classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: Software Development :: Internationalization",
+  "Topic :: Software Development :: Localization",
+  "Topic :: Utilities"
+]
+dependencies = [
+  "fqdn>=1.5.1",
+  "jsonschema>=4.23.0",
+  "rfc3987>=1.3.8",
+  "strict-rfc3339>=0.7"
+]
+description = "A collection of JSON schemas used by Weblate"
+keywords = [
+  "i18n",
+  "l10n",
+  "gettext",
+  "weblate",
+  "translate"
+]
+name = "weblate_schemas"
+requires-python = ">=3.9"
+version = "2024.1"
+
+[[project.authors]]
+email = "michal@cihar.com"
+name = "Michal Čihař"
+
+[project.entry-points."fedora.messages"]
+"weblate.message.v1" = "weblate_schemas.messages:WeblateV1Message"
+
+[project.license]
+text = "MIT"
+
+[project.optional-dependencies]
+dev = [
+  "weblate_schemas[lint,test]"
+]
+lint = [
+  "pre-commit==4.0.1"
+]
+test = [
+  "pytest",
+  "pytest-cov",
+  "fedora-messaging",
+  "jsonschema[format]"
+]
+
+[project.readme]
+content-type = "text/x-rst"
+file = "README.rst"
+
+[project.urls]
+Documentation = "https://docs.weblate.org/"
+Download = "https://github.com/WeblateOrg/weblate_schemas"
+Funding = "https://weblate.org/donate/"
+Homepage = "https://weblate.org/"
+"Issue Tracker" = "https://github.com/WeblateOrg/weblate_schemas/issues"
+"Source Code" = "https://github.com/WeblateOrg/weblate_schemas"
+Twitter = "https://twitter.com/WeblateOrg"
+
+[tool.check-manifest]
+ignore = [
+  "LICENSES/*",
+  "json/*",
+  ".reuse/dep5",
+  "scripts/*",
+  "*.toml",
+  "*.yml",
+  "*.yaml",
+  "*.json",
+  ".editorconfig",
+  ".weblate"
+]
 
 [tool.isort]
 profile = "black"
 
-[tool.ruff]
+[tool.ruff.lint]
 ignore = [
   "D203",  # CONFIG: incompatible with D211
   "D212"  # CONFIG: incompatible with D213
@@ -43,7 +133,19 @@ select = [
   "SLF",
   "N"
 ]
-target-version = "py39"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 16
+
+[tool.setuptools]
+include-package-data = true
+license-files = [
+  "LICENSE"
+]
+platforms = [
+  "any"
+]
+zip-safe = false
+
+[tool.setuptools.packages.find]
+namespaces = true
