--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,11 @@ jobs:
         - '3.10'
         - '3.11'
         - '3.12'
+        - '3.13'
     name: Python ${{ matrix.python-version }}
 
     steps:
-    - uses: actions/checkout@v4                                       # v4
+    - uses: actions/checkout@v4
     - name: Cache pip
       uses: actions/cache@v4
       with:
