chore: Sync with WeblateOrg/meta

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ ignore = [
 [tool.isort]
 profile = "black"
 
+[tool.ruff.format]
+docstring-code-format = true
+
 [tool.ruff.lint]
 ignore = [
   "D203",  # CONFIG: incompatible with D211
