chore: Sync with WeblateOrg/meta

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ requires-python = ">=3.9"
 version = "2025.1"
 
 [[project.authors]]
-email = "michal@cihar.com"
+email = "michal@weblate.org"
 name = "Michal Čihař"
 
 [project.entry-points."fedora.messages"]
