--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,48 +96,33 @@ profile = "black"
 docstring-code-format = true
 
 [tool.ruff.lint]
-ignore = [
-  "D203",  # CONFIG: incompatible with D211
-  "E501",  # CONFIG: using formatter
-  "D212"  # CONFIG: incompatible with D213
-]
-select = [
-  "E",
-  "F",
-  "B",
-  "T10",
-  "A",
-  "C4",
-  "C90",
-  "YTT",
-  "DJ",
-  "UP",
+extend-safe-fixes = [
+  "ANN",
   "D",
-  "PD",
-  "PGH",
-  "PL",
-  "TRY",
-  "RUF",
-  "ERA",
-  "ICN",
-  "ISC",
-  "EXE",
-  "INP",
-  "PIE",
-  "G",
-  "PYI",
-  "Q",
+  "FA102",
+  "FLY",
   "SIM",
-  "TID",
-  "RSE",
-  "T20",
-  "RET",
-  "SLF",
-  "N"
+  "TCH",
+  "UP"
 ]
+ignore = [
+  "COM",  # CONFIG: No trailing commas
+  "CPY001",
+  "D203",  # CONFIG: incompatible with D211
+  "D206",  # CONFIG: formatter
+  "E501",  # CONFIG: using formatter
+  "D212",  # CONFIG: incompatible with D213
+  "ANN003",  # Missing type annotation for `**kwargs`
+  "DOC"  # TODO: Ignore all pydoclint rules for now
+]
+preview = true
+select = ["ALL"]
 
 [tool.ruff.lint.mccabe]
 max-complexity = 16
+
+[tool.ruff.lint.per-file-ignores]
+"weblate_schemas/tests/**.py" = ["S101"]
 
 [tool.setuptools]
 include-package-data = true
