--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
   - id: doccmd
     args: [--language, python, --no-pad-file, --command, ruff format]
     additional_dependencies:
-    - ruff==v0.12.3
+    - ruff==0.12.3
 - repo: meta
   hooks:
   - id: check-hooks-apply
