--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
       with:
         enable-cache: true
         cache-suffix: ${{ matrix.python-version }}
+        # renovate: datasource=pypi depName=uv versioning=pep440
+        version: 0.9.4
     - name: Install pip dependencies
       run: uv pip install --system -e .[dev]
     - name: Test
